--- a/clase_uno/index.html
+++ b/clase_uno/index.html
@@ -7,22 +7,22 @@
   <link rel="stylesheet" href="styles.css">
   <title>JavaScript</title>
 </head>
-<body>  
+<body>
   <main class="contenedor">
     <form class="formulario" action="">
       <div class="numeros">
         <input id="numeroUno" type="text">
         <input id="numeroDos" type="text">
       </div>
+      <label id="resultado" for=""></label>
       <div class="resultados">
         <input value="+" id="suma" type="button">
-        <input value="-" id="resta" type="button">
+        <input value="-" id="resta" type="button" onclick="resta()">
         <input value="*" id="multiplicacion" type="button">
         <input value="/" id="division" type="button">
       </div>
     </form>
-    <label id="resultado" for=""></label>
   </main>
-  <script src="./main.js"></script>
+  <script src="./calculadora.js"></script>
 </body>
 </html>
